# bepinex-installer

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: bepinex.rs  installer.rs  main.rs
