[package]
name = "bepinex-installer"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18.0"
egui = "0.18.1"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rfd = "0.10.0"
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
steamlocate = "1.0.1"
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["full"] }
zip = "0.6.2"
